--- a/class_notes/1_What_is_GIS.qmd
+++ b/class_notes/1_What_is_GIS.qmd
@@ -1,15 +1,23 @@
 ---
 title: "GIS in R Workshop"
-date: "2024-6-21"
+date: "2024-6-1"
 fig-cap-location: top
 format:
   html:
-    code-fold: true
+    page-layout: full
+    code-fold: show
     theme: flatly
 execute:
   enabled: true
   echo: false
 ---
+
+```{css}
+.figure {
+  margin: auto;
+  text-align: center;
+}
+```
 
 ## Introduction
 
@@ -32,4 +40,4 @@ For our purposes here, "mapping" refers to the visual representation of these fe
 
 ![Population Raster with State Boundaries](https://github.com/lagerratrobe/GIS_IN_R_WORKSHOP/blob/main/images/WA_pop_raster.png?raw=true)
 
-There are many ways we can generate maps in R.  In this class we'll look at several, including; the base `plot()` function and `leaflet` library.
+There are many ways we can generate maps in R.  In this class we'll look at several, including the basic `plot()` function and `leaflet` library.
